Fix unit dot not overflowing.

--- a/app/components/Anchor/DotAnchor.scss
+++ b/app/components/Anchor/DotAnchor.scss
@@ -20,8 +20,8 @@
 }
 
 .DotAnchor__inStanza {
-    width: $js__length__icon;
-    height: $js__length__icon;
+    width: $length__iconSmaller;
+    height: $length__iconSmaller;
 }
 
 // TODO: Come up with better styling, obviously.
