--- a/app/components/Stanza/Unit/UnitDot.scss
+++ b/app/components/Stanza/Unit/UnitDot.scss
@@ -11,7 +11,6 @@
     }
 
     opacity: 0;
-    overflow: hidden;
 
     .parentIsShown
     & {
